--- a/ErrorFreeSumDemo/ErrorFreeSumDemo.vcxproj
+++ b/ErrorFreeSumDemo/ErrorFreeSumDemo.vcxproj
@@ -143,11 +143,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="kahan_sum_ss.cpp" />
+    <ClCompile Include="errfree_sum_ss.cpp" />
     <ClCompile Include="_main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="kahan_sum.h" />
+    <ClInclude Include="errfree_sum.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
